force-app/main/default/objects/cgcloud__Contract_Payment__c/cgcloud__Contract_Payment__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the contract payment object, used to track such type of customer payment request agreed via contract.</description>
    <label>Contract Payment</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Contract Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>