force-app/main/default/objects/cgcloud__Contract_Payment__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <description>Reference to the customer.</description>
    <label>Beneficiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Payments</relationshipLabel>
    <relationshipName>Contract_Payments_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>