force-app/main/default/objects/cgcloud__Contract_Payment__c/fields/cgcloud__Accountable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accountable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User accountable for the contract payment.</description>
    <label>Accountable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Payments_User</relationshipName>
    <type>Lookup</type>
</CustomField>