force-app/main/default/objects/cgcloud__Contract_Payment__c/fields/cgcloud__Contract_Payment_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Contract_Payment_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the contract payment template.</description>
    <label>Contract Payment Template</label>
    <referenceTo>cgcloud__Contract_Payment_Template__c</referenceTo>
    <relationshipLabel>Contract Payments</relationshipLabel>
    <relationshipName>Contract_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>