force-app/main/default/objects/cgcloud__Contract_Payment__c/fields/cgcloud__Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Paid_Amount__c</fullName>
    <description>Holds the final paid requested amount.</description>
    <label>Paid</label>
    <summarizedField>cgcloud__Contract_Payment_Tactic__c.cgcloud__Actual_Costs__c</summarizedField>
    <summaryFilterItems>
        <field>cgcloud__Contract_Payment_Tactic__c.cgcloud__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Contract_Payment_Tactic__c.cgcloud__Contract_Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>