force-app/main/default/objects/cgcloud__Contract_Payment__c/fields/cgcloud__Phase__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Phase__c</fullName>
    <description>Describes the current phase of the contract payment.</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>ForApproval</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>