force-app/main/default/objects/cgcloud__Contract_Payment__c/fields/cgcloud__Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reference_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Reference date of the contract payment.</description>
    <label>Reference Date</label>
    <type>Date</type>
</CustomField>