force-app/main/default/objects/cgcloud__Contract_Payment__c/fields/cgcloud__Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Requested_Amount__c</fullName>
    <description>Holds the requested total amount.</description>
    <label>Requested</label>
    <summarizedField>cgcloud__Contract_Payment_Tactic__c.cgcloud__Actual_Costs__c</summarizedField>
    <summaryForeignKey>cgcloud__Contract_Payment_Tactic__c.cgcloud__Contract_Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>