force-app/main/default/objects/cgcloud__Contract_Payment__c/fields/cgcloud__Responsible__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User responsible  for the contract payment.</description>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>