force-app/main/default/objects/cgcloud__Contract_Payment__c/fields/cgcloud__Text__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Text__c</fullName>
    <description>Holds the text of a payment request.</description>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>