force-app/main/default/objects/cgcloud__Contract_Payment__c/recordTypes/cgcloud__Edit.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Edit</fullName>
    <active>true</active>
    <label>Edit</label>
</RecordType>