force-app/main/default/objects/cgcloud__Contract_Payment__c/recordTypes/cgcloud__ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__ReadOnly</fullName>
    <active>true</active>
    <label>ReadOnly</label>
</RecordType>