force-app/main/default/objects/cgcloud__Contract_Payment__c/validationRules/cgcloud__contract_payment_template_no_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__contract_payment_template_no_editable</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(cgcloud__Contract_Payment_Template__c)</errorConditionFormula>
    <errorMessage>The Contract Payment Template can&apos;t be edited after Contract Payment creation.</errorMessage>
</ValidationRule>