force-app/main/default/objects/cgcloud__Contract_Payment__c/validationRules/cgcloud__Fields_non_editable_RT_read_only.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Fields_non_editable_RT_read_only</fullName>
    <active>true</active>
    <description>Text can be editable in this Phase.</description>
    <errorConditionFormula>RecordType.DeveloperName  == &apos;ReadOnly&apos; &amp;&amp; (ISCHANGED(Name) || ISCHANGED (cgcloud__Description_Language_1__c))</errorConditionFormula>
    <errorMessage>Text can be editable in this Phase.</errorMessage>
</ValidationRule>