force-app/main/default/objects/cgcloud__Contract_Payment__c/validationRules/cgcloud__Lock_the_name_Editability.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Lock_the_name_Editability</fullName>
    <active>true</active>
    <description>The Contract Payment Name can&apos;t be edited after Contract Payment creation.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName == &apos;ReadOnly&apos;,  ISCHANGED( Name ))</errorConditionFormula>
    <errorDisplayField>cgcloud__Accountable__c</errorDisplayField>
    <errorMessage>The Contract Payment Name can&apos;t be edited after Contract Payment creation.</errorMessage>
</ValidationRule>