force-app/main/default/objects/cgcloud__Contract_Payment__c/validationRules/cgcloud__Name_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Name_unique</fullName>
    <active>true</active>
    <description>Check if the name is unque in the system</description>
    <errorConditionFormula>and( 
Name = VLOOKUP 
($ObjectType.cgcloud__Contract_Payment__c.Fields.Name , $ObjectType.cgcloud__Contract_Payment__c.Fields.Name, Name ), 

not( 
Id=VLOOKUP 
($ObjectType.cgcloud__Contract_Payment__c.Fields.Id , $ObjectType.cgcloud__Contract_Payment__c.Fields.Name, Name )))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Contract Payment Name already exists, please enter different Name.</errorMessage>
</ValidationRule>