force-app/main/default/objects/cgcloud__Contract_Payment__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Contract_Payment_Template__c</columns>
    <columns>cgcloud__Account__c</columns>
    <columns>cgcloud__Phase__c</columns>
    <columns>cgcloud__Initiation_Date__c</columns>
    <columns>cgcloud__Reference_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>